--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       { "src": "*.js", "use": "@vercel/node" }
     ],
         "routes": [
-          { "src": "/(.*)", "dest": "/" }
+          { "src": "/(.*)", "dest": "/" },
+          { "src": "/(.*)", "dest": "/models" }
         ]
   }
